# l1-lidar

./: .gitignore  Dockerfile.lidar  README.md  l1_probe  l1_probe.c  l1_test  l1_test.c  l1_test2  l1_test2.cpp  lidar.rviz  start_lidar.sh  stm32-code.7z
.claude/: settings.local.json
fast_lio/: CMakeLists.txt  package.xml
fast_lio/config/: l1_lidar.yaml
fast_lio/include/: IMU_Processing.hpp  common_lib.h  preprocess.h  so3_math.h
fast_lio/include/ikd-Tree/: ikd_Tree.h
fast_lio/launch/: fast_lio.launch.py
fast_lio/src/: ikd_Tree.cpp  laserMapping.cpp  preprocess.cpp
l1_driver/: CMakeLists.txt  package.json  package.xml
l1_driver/include/l1_driver/: l1_parser.hpp
l1_driver/launch/: l1_driver.launch.py
l1_driver/src/: l1_driver_node.cpp  l1_parser.cpp
lora_bridge/: CMakeLists.txt  package.xml
lora_bridge/launch/: lora_bridge.launch.py
lora_bridge/src/: lora_bridge_node.cpp
qt_visualizer/: CMakeLists.txt  package.xml
qt_visualizer/include/: cloud_widget.hpp  main_window.hpp  ros_worker.hpp
qt_visualizer/src/: cloud_widget.cpp  main.cpp  main_window.cpp  ros_worker.cpp
stm32-code/: Project.uvguix.LiuYanan  Project.uvoptx  Project.uvprojx  论文0.0.0.1.md
stm32-code/Listings/: Project.map
stm32-code/Objects/: Project.axf  Project.build_log.htm  Project.htm  Project.lnp  Project_Target 1.dep  key.crf  key.d  lidar.crf  lidar.d  lora.crf  lora.d  main.crf  main.d  oled.crf  oled.d  stm32f10x_it.crf  stm32f10x_it.d
stm32-code/User/: key.c  key.h  lidar.c  lidar.h  lora.c  lora.h  main.c  oled.c  oled.h  stm32f10x_it.c  stm32f10x_it.h
stm32_remote/Core/Inc/: key.h  lora.h  oled.h
stm32_remote/Core/Src/: key.c  lora.c  main.c  oled.c
