<?xml version="1.0"?>
<package format="3">
  <name>fast_lio</name>
  <version>2.0.0</version>
  <description>FAST-LIO2 LiDAR-IMU SLAM adapted for Unitree L1</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>GPL-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
