<?xml version="1.0"?>
<package format="3">
  <name>lora_bridge</name>
  <version>0.0.1</version>
  <description>Raspberry Pi LoRa bridge node for SLAM remote control</description>
  <maintainer email="user@xidian.edu.cn">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
