<?xml version="1.0"?>
<package format="3">
  <name>qt_visualizer</name>
  <version>0.0.1</version>
  <description>Qt5 point cloud visualizer for Unitree L1 LiDAR</description>
  <maintainer email="user@xidian.edu.cn">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
